# Artificial_world

./: .cursorrules  .dockerignore  .env.example  .gga  .gitignore  AGENTE_ENTRANTE.md  AGENTS.md  AUDITORIA_FASES_1-4.md  CAMINO_B_LISTO.md  CLAUDE.md  DEBUG_COMANDOS.md  Dockerfile.prod  Dockerfile.vps  ENFOQUE_STARTUP.md  ESTADO_ACTUAL_Y_VERIFICACION.md  PLAN_MUNDO_ARTIFICIAL.md  PRODUCCION_PLAN.md  README.md  REPORTE_CHESS_1.md  REVISION_Y_TESTS.md  VERIFICACION_COMPLETA.md  VISION_MUNDO.md  VISION_STARTUP_MILLONARIA.md  analizar_debug.py  app_salida.txt  artificial-world.html  bootstrap_next_steps.md  bootstrap_report.json  build_exe.ps1  configuracion.py  cronica_fundacional.html  cronica_fundacional.py  debug_log.txt  debug_output.json  debug_runner.py  diagnostico.py  diagnostico_utilidades.py  docker-compose.ci.yml  docker-compose.prod.yml  docker-compose.vps.yml  (+16 more)
ArtificialWorldV2/: AUDITORIA_COMPLETA.md  AgentStatusOverlay.swift  CHECKLIST.md  ESTADO_PROYECTO.md  Info-ATS.plist  PROXIMOS_3_PASOS.md  README.md  RESUMEN.md  ROADMAP.md  SOLUCION_SPM.md  WorldPersistence.swift
IA-Entre-Amigos-main/: README.md  package-lock.json  package.json
Repositorios para auditar/: __init__.py  (+3 more)
Repositorios para auditar/Xcom-mac-silicon-main/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
Repositorios para auditar/Xcom-mac-silicon-main/src-tauri/icons/: icon.icns
Repositorios para auditar/Xcom-mac-silicon-main/src-tauri/src/: accounts.rs  lib.rs  main.rs
Repositorios para auditar/Xcom-mac-silicon-main/src-tauri/src/menu/: builder.rs  handlers.rs  items.rs  mod.rs
(+1081 files in other folders)
