[package]
name = "twitter-mac"
version = "0.6.0"
description = "Cliente no oficial de X (Twitter) para macOS"
authors = ["686f6c61 <https://github.com/686f6c61>"]
edition = "2021"
homepage = "https://github.com/686f6c61/Xcom-mac-silicon"
repository = "https://github.com/686f6c61/Xcom-mac-silicon"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "twitter_mac_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
aes-gcm = "0.10"
rand = "0.8"
argon2 = { version = "0.5", features = ["std"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.11"
